[package]
name = "dafm"
version = "0.1.0"
edition = "2024"

[dependencies]
avian = "0.0.0"
avian2d = "0.3.1"
bevy = { version = "0.16.1", features = [
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "dynamic_linking",
    "multi_threaded",
    "png",
    "std",
    "sysinfo_plugin",
    "track_location",
], default-features = false }
bevy-inspector-egui = { version = "0.32.0", default-features = false, features = [
    "bevy_render",
] }
bevy_ecs_tilemap = "0.16.0"
bevy_egui = "0.35.1"
bevy_enhanced_input = "0.15.1"
bevy_pancam = { version = "0.18.0", features = ["bevy_egui"] }
bevy_rand = { version = "0.11.1", features = ["wyrand"] }
pathfinding = "4.14.0"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiled = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
